Localisation-Support-Update: German translation and HTML5Blank.pot

--- a/languages/de_DE.po
+++ b/languages/de_DE.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: HTML5 Blank WordPress Theme\n"
-"POT-Creation-Date: 2012-10-03 02:30+0100\n"
+"POT-Creation-Date: 2012-10-03 14:58+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Jürgen Rabe <webmaster@head-graphics.com>\n"
 "Language-Team: Jürgen Rabe | www.egado.de <rabe@egado.de>\n"
@@ -27,34 +27,30 @@ msgstr "Zurück zur Startseite?"
 msgid "Archives"
 msgstr "Archive"
 
-#: ../archive.php:30 ../author.php:42 ../category.php:30 ../index.php:30
-#: ../search.php:30 ../single.php:28 ../tag.php:30
-msgid "Published by"
-msgstr "Veröffentlicht von"
-
-#: ../archive.php:31 ../author.php:43 ../category.php:31 ../index.php:31
-#: ../search.php:31 ../single.php:29 ../tag.php:31
-msgid "Leave your thoughts"
-msgstr "Schreibe einen Kommentar"
-
-#: ../archive.php:31 ../author.php:43 ../category.php:31 ../index.php:31
-#: ../search.php:31 ../single.php:29 ../tag.php:31
-msgid "1 Comment"
-msgstr "1 Kommentar"
-
-#: ../archive.php:31 ../author.php:43 ../category.php:31 ../index.php:31
-#: ../search.php:31 ../single.php:29 ../tag.php:31
-msgid "% Comments"
-msgstr "% Kommentare"
-
-#: ../archive.php:50 ../author.php:62 ../index.php:50 ../page.php:31
-#: ../single.php:56 ../tag.php:50 ../template-demo.php:33
-msgid "Sorry, nothing to display."
-msgstr "Nichts gefunden, was den Suchkriterien entspricht."
-
 #: ../author.php:8
 msgid "Author Archives for "
 msgstr "Autor-Archiv für "
+
+#: ../author.php:42 ../loop.php:23 ../single.php:28
+msgid "Published by"
+msgstr "Veröffentlicht von"
+
+#: ../author.php:43 ../loop.php:24 ../single.php:29
+msgid "Leave your thoughts"
+msgstr "Schreibe einen Kommentar"
+
+#: ../author.php:43 ../loop.php:24 ../single.php:29
+msgid "1 Comment"
+msgstr "1 Kommentar"
+
+#: ../author.php:43 ../loop.php:24 ../single.php:29
+msgid "% Comments"
+msgstr "% Kommentare"
+
+#: ../author.php:62 ../loop.php:45 ../page.php:31 ../single.php:56
+#: ../template-demo.php:33
+msgid "Sorry, nothing to display."
+msgstr "Nichts gefunden, was den Suchkriterien entspricht."
 
 #: ../category.php:6
 msgid "Categories for"
@@ -142,13 +138,14 @@ msgstr "Keine HTML5 Blank Custom Posts im Papierkorb gefunden"
 msgid "Latest Posts"
 msgstr "Letzte Artikel"
 
+#: ../loop.php:43
+#, php-format
+msgid "%s results for "
+msgstr "%s Ergebnisse für "
+
 #: ../search.php:6
 msgid "Search Results for"
 msgstr "Suchergebnisse für"
-
-#: ../search.php:50
-msgid "No results found for "
-msgstr "Die Suche ergab keine Treffer für "
 
 #: ../searchform.php:5
 msgid "Search"
@@ -160,7 +157,7 @@ msgstr "Stichwörter: "
 
 #: ../single.php:38
 msgid "Categorised in: "
-msgstr "Kategorisiert in:"
+msgstr "Kategorisiert in: "
 
 #: ../single.php:40
 msgid "This post was written by "
