--- a/languages/ro_RO.po
+++ b/languages/ro_RO.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: HTML5 Blank WordPress Theme\n"
 "POT-Creation-Date: 2012-10-18 00:53+0100\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Jürgen Rabe <webmaster@head-graphics.com>\n"
+"Last-Translator: Ioan Virag <ioan@ioanvirag.com>\n"
 "Language-Team: Ioan Virag | www.ioanvirag.com <ioan@ioanvirag.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,171 +18,173 @@ msgstr ""
 
 #: ../404.php:9
 msgid "Page not found"
-msgstr ""
+msgstr "Pagina nu a fost găsită"
 
 #: ../404.php:10
 msgid "Return home?"
-msgstr ""
+msgstr "Vă întoarceţi la prima pagină?"
 
 #: ../archive.php:6
 msgid "Archives"
-msgstr ""
+msgstr "Arhive"
 
 #: ../author.php:8
 msgid "Author Archives for "
-msgstr ""
+msgstr "Autor-Arhive pentru "
 
 #: ../author.php:41 ../loop.php:22 ../single.php:27
 msgid "Published by"
-msgstr ""
+msgstr "Publicat de"
 
 #: ../author.php:42 ../loop.php:23 ../single.php:28
 msgid "Leave your thoughts"
-msgstr ""
+msgstr "Lasă un comentariu"
 
 #: ../author.php:42 ../loop.php:23 ../single.php:28
 msgid "1 Comment"
-msgstr ""
+msgstr "1 Comentariu"
 
 #: ../author.php:42 ../loop.php:23 ../single.php:28
 msgid "% Comments"
-msgstr ""
+msgstr "% Comentarii"
 
 #: ../author.php:61 ../loop.php:41 ../page.php:31 ../single.php:55
 #: ../template-demo.php:33
 msgid "Sorry, nothing to display."
-msgstr ""
+msgstr "Ne pare rău, nu există nici un rezultat.."
 
 #: ../category.php:6
 msgid "Categories for"
-msgstr ""
+msgstr "Categorii pentru"
 
 #: ../comments.php:3
 msgid "Post is password protected. Enter the password to view any comments."
 msgstr ""
+"Postarea necesită o parolă. Introduceţi parola pentru a vedea comentariile."
 
 #: ../comments.php:18
 msgid "Comments are closed here."
-msgstr ""
+msgstr "Comentariile sunt închise."
 
 #: ../footer.php:6
 msgid "Powered by"
-msgstr ""
+msgstr "Pus la dispoziţie de "
 
 #: ../functions.php:174
 #, php-format
-msgid "<span class=\"fn\">%s</span> <span class=\"says\">says:</span>"
-msgstr ""
+msgid "<cite class=\"fn\">%s</cite> <span class=\"says\">says:</span>"
+msgstr "<cite class=\"fn\">%s</cite> <span class=\"says\">spune:</span>"
 
 #: ../functions.php:177
 msgid "Your comment is awaiting moderation."
-msgstr ""
+msgstr "Comentariul dumneavoastră a fost trimis pentru a fi moderat."
 
 #: ../functions.php:184
 #, php-format
 msgid "%1$s at %2$s"
-msgstr ""
+msgstr "%1$s la %2$s"
 
 #: ../functions.php:184
 msgid "(Edit)"
-msgstr ""
+msgstr "(Editare)"
 
 #: ../functions.php:209
 msgid "Header Menu"
-msgstr ""
+msgstr "Meniu Header"
 
 #: ../functions.php:210
 msgid "Sidebar Menu"
-msgstr ""
+msgstr "Meniu Sidebar"
 
 #: ../functions.php:211
 msgid "Extra Menu"
-msgstr ""
+msgstr "Meniu Extra"
 
 #: ../functions.php:257
 msgid "Widget Area 1"
-msgstr ""
+msgstr "Zonă Widget 1"
 
 #: ../functions.php:258 ../functions.php:269
 msgid "Description for this widget-area..."
-msgstr ""
+msgstr "Descriere pentru această zonă-widget..."
 
 #: ../functions.php:268
 msgid "Widget Area 2"
-msgstr ""
+msgstr "Zonă Widget 2"
 
 #: ../functions.php:333
 msgid "View Article"
-msgstr ""
+msgstr "Vezi Articol"
 
 #: ../functions.php:438 ../functions.php:439
 msgid "HTML5 Blank Custom Post"
-msgstr ""
+msgstr "Tip de postare customizată HTML5 Blank"
 
 #: ../functions.php:440
 msgid "Add New"
-msgstr ""
+msgstr "Adaugă Nou"
 
 #: ../functions.php:441
 msgid "Add New HTML5 Blank Custom Post"
-msgstr ""
+msgstr "Adaugă un nou tip de postare customizată HTML5 Blank"
 
 #: ../functions.php:442
 msgid "Edit"
-msgstr ""
+msgstr "Editare"
 
 #: ../functions.php:443
 msgid "Edit HTML5 Blank Custom Post"
-msgstr ""
+msgstr "Editare postare customizată de tip HTML5 Blank"
 
 #: ../functions.php:444
 msgid "New HTML5 Blank Custom Post"
-msgstr ""
+msgstr "Nouă postare customizată de tip HTML5 Blank"
 
 #: ../functions.php:445 ../functions.php:446
 msgid "View HTML5 Blank Custom Post"
-msgstr ""
+msgstr "Vezi postare customizată de tip HTML5 Blank"
 
 #: ../functions.php:447
 msgid "Search HTML5 Blank Custom Post"
-msgstr ""
+msgstr "Caută postare customizată de tip HTML5 Blank"
 
 #: ../functions.php:448
 msgid "No HTML5 Blank Custom Posts found"
-msgstr ""
+msgstr "Nu s-a găsit nici o postare customizată de tip HTML5 Blank"
 
 #: ../functions.php:449
 msgid "No HTML5 Blank Custom Posts found in Trash"
 msgstr ""
+"Nu s-a găsit nici o postare customizată de tip HTML5 Blank în coşul de gunoi"
 
 #: ../index.php:6
 msgid "Latest Posts"
-msgstr ""
+msgstr "Ultima postare"
 
 #: ../search.php:6
 #, php-format
 msgid "%s Search Results for "
-msgstr ""
+msgstr "%s Rezultatele căutării pentru"
 
 #: ../searchform.php:5
 msgid "Search"
-msgstr ""
+msgstr "Caută"
 
 #: ../single.php:35
 msgid "Tags: "
-msgstr ""
+msgstr "Etichete: "
 
 #: ../single.php:37
 msgid "Categorised in: "
-msgstr ""
+msgstr "Categorisit în: "
 
 #: ../single.php:39
 msgid "This post was written by "
-msgstr ""
+msgstr "Acest articol a fost scris de "
 
 #: ../tag.php:6
 msgid "Tag Archive: "
-msgstr ""
+msgstr "Arhivă-Etichete: "
 
 #~ msgid "%s results for "
 #~ msgstr "%s Ergebnisse für "
