--- a/languages/de_DE.po
+++ b/languages/de_DE.po
@@ -1,10 +1,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: HTML5 Blank WordPress Theme\n"
-"POT-Creation-Date: 2013-09-18 00:05+0100\n"
+"POT-Creation-Date: 2013-09-18 00:25+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Jürgen Rabe | www.egado.de <rabe@egado.de>\n"
 "Language-Team: Jürgen Rabe | www.egado.de <rabe@egado.de>\n"
+"Language: German\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,7 +13,6 @@ msgstr ""
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: _e;__\n"
 "X-Poedit-Basepath: .\n"
-"Language: German\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPath-1: ..\n"
 
@@ -169,6 +169,10 @@ msgstr "Letzte Artikel"
 #, php-format
 msgid "%s Search Results for "
 msgstr "%s Suchergebnisse für "
+
+#: ../searchform.php:3
+msgid "To search, type and hit enter."
+msgstr "Suchbegriff…"
 
 #: ../searchform.php:4
 msgid "Search"
