--- a/languages/nl_NL.po
+++ b/languages/nl_NL.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: HTML5 Blank WordPress Theme\n"
-"POT-Creation-Date: 2013-03-28 18:10+0000\n"
+"POT-Creation-Date: 2013-12-5 10:50+0000\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
-"Language-Team: Kevin Plattret <kevin@plattret.me>\n"
+"Language-Team: Frederik De Roover <frederik@spektrumdesign.be>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,60 +12,59 @@ msgstr ""
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: _e;__\n"
 "X-Poedit-Basepath: .\n"
-"Language: Français\n"
+"Language: Nederlands\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPath-1: ..\n"
 
 #: ../404.php:9
 msgid "Page not found"
-msgstr "Page non trouvée"
+msgstr "Pagina niet gevonden"
 
 #: ../404.php:10
 msgid "Return home?"
-msgstr "Retour à la page d'accueil ?"
+msgstr "Terg naar home?"
 
 #: ../archive.php:6
 msgid "Archives"
-msgstr "Archives"
+msgstr "Archiven"
 
 #: ../author.php:8
 msgid "Author Archives for "
-msgstr "Archives de l'auteur "
+msgstr "Auteur archieven voor "
 
 #: ../author.php:41 ../loop.php:22 ../single.php:27
 msgid "Published by"
-msgstr "Publié par"
+msgstr "Gepubliceerd door"
 
 #: ../author.php:42 ../loop.php:23 ../single.php:28
 msgid "Leave your thoughts"
-msgstr "Laissez vos commentaires"
+msgstr "Laat uw gedicht achter"
 
 #: ../author.php:42 ../loop.php:23 ../single.php:28
 msgid "1 Comment"
-msgstr "1 Commentaire"
+msgstr "1 Commentaar"
 
 #: ../author.php:42 ../loop.php:23 ../single.php:28
 msgid "% Comments"
-msgstr "% Comentaires"
+msgstr "% Commentaren"
 
 #: ../author.php:61 ../loop.php:41 ../page.php:31 ../single.php:55
 #: ../template-demo.php:33
 msgid "Sorry, nothing to display."
-msgstr "Désolé, aucun contenu disponible."
+msgstr "Sorry, niets om weer te geven."
 
 #: ../category.php:6
 msgid "Categories for"
-msgstr "Catégories pour"
+msgstr "Categoriën voor"
 
 #: ../comments.php:3
 msgid "Post is password protected. Enter the password to view any comments."
 msgstr ""
-"Cet article est protégé par un mot de passe. Merci d'entrer le mot de passe "
-"pour voir les commentaires."
+"Dit post is beveiligd met een wachtwoord. Gelieve uw wachtwoord in te voeren "
 
 #: ../comments.php:18
 msgid "Comments are closed here."
-msgstr "Les commentaires sont fermés."
+msgstr "Commententaren zijn gesloten."
 
 #: ../footer.php:6
 msgid "Powered by"
@@ -91,31 +90,31 @@ msgstr "(Éditer)"
 
 #: ../functions.php:209
 msgid "Header Menu"
-msgstr "Menu d'entête"
+msgstr "Hoofdmenu"
 
 #: ../functions.php:210
 msgid "Sidebar Menu"
-msgstr "Menu de barre latérale"
+msgstr "Sidebar Menu"
 
 #: ../functions.php:211
 msgid "Extra Menu"
-msgstr "Menu supplémentaire"
+msgstr "Extra Menu"
 
 #: ../functions.php:257
 msgid "Widget Area 1"
-msgstr "Zone à widget 1"
+msgstr "Widget Zone 1"
 
 #: ../functions.php:258 ../functions.php:269
 msgid "Description for this widget-area..."
-msgstr "Description pour cette zone à widget..."
+msgstr "Beschrijving voor deze widget zone..."
 
 #: ../functions.php:268
 msgid "Widget Area 2"
-msgstr "Zone à widget 2"
+msgstr "Widget Zone 2"
 
 #: ../functions.php:333
 msgid "View Article"
-msgstr "Voir l'article"
+msgstr "Bekijk Artikel"
 
 #: ../functions.php:438 ../functions.php:439
 msgid "HTML5 Blank Custom Post"
@@ -143,32 +142,32 @@ msgstr "Nouvel article personnalisé"
 
 #: ../functions.php:445 ../functions.php:446
 msgid "View HTML5 Blank Custom Post"
-msgstr "Voir l'article personnalisé"
+msgstr "Bekijk berichten"
 
 #: ../functions.php:447
 msgid "Search HTML5 Blank Custom Post"
-msgstr "Rechercher un article personnalisé"
+msgstr "Zoeken in berichten"
 
 #: ../functions.php:448
 msgid "No HTML5 Blank Custom Posts found"
-msgstr "Aucun article personnalisé trouvé"
+msgstr "Geen Bericht gevonden"
 
 #: ../functions.php:449
 msgid "No HTML5 Blank Custom Posts found in Trash"
-msgstr "Aucun article personnalisé trouvé dans la corbeille"
+msgstr "Geen Bericht gevonden in de prullenbak"
 
 #: ../index.php:6
 msgid "Latest Posts"
-msgstr "Articles récents"
+msgstr "Laatste Berichten"
 
 #: ../search.php:6
 #, php-format
 msgid "%s Search Results for "
-msgstr "%s Résultats de recherche pour "
+msgstr "%s Zoekresultaten voor "
 
 #: ../searchform.php:5
 msgid "Search"
-msgstr "Rechercher"
+msgstr "Zoeken"
 
 #: ../single.php:35
 msgid "Tags: "
@@ -176,15 +175,15 @@ msgstr "Tags : "
 
 #: ../single.php:37
 msgid "Categorised in: "
-msgstr "Classés dans :"
+msgstr "Gecategoriseerd in :"
 
 #: ../single.php:39
 msgid "This post was written by "
-msgstr "Cet article a été écrit par "
+msgstr "Dit bericht is geschreven door "
 
 #: ../tag.php:6
 msgid "Tag Archive: "
-msgstr "Archives de tags : "
+msgstr "Tag Archieven : "
 
 #~ msgid "%s results for "
-#~ msgstr "%s résultats pour "
+#~ msgstr "%s resultaten voor "
