--- a/languages/es_CL.po
+++ b/languages/es_CL.po
@@ -5,7 +5,7 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: Fabián Núñez <fanuneza@gmail.com>\n"
 "Language-Team: Ioan Virag | www.ioanvirag.com <ioan@ioanvirag.com>\n"
-"Language: es_ES\n"
+"Language: es_CL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -13,6 +13,7 @@ msgstr ""
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: _e;__\n"
 "X-Poedit-Basepath: .\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPath-1: ..\n"
 
@@ -191,3 +192,6 @@ msgstr "Para buscar, escribe y presiona Enter"
 
 #~ msgid "%s results for "
 #~ msgstr "%s Ergebnisse für "
+
+#~ msgid "About"
+#~ msgstr "Acerca de"
