Update translations of the category page heading in src/languages.
Google translate was used for generating the translations.

.po files were converted to .mo using http://tools.konstruktors.com/

--- a/src/languages/HTML5Blank.pot
+++ b/src/languages/HTML5Blank.pot
@@ -57,7 +57,7 @@ msgid "Sorry, nothing to display."
 msgstr ""
 
 #: ../category.php:6
-msgid "Categories for"
+msgid "Category:"
 msgstr ""
 
 #: ../comments.php:3
