--- a/src/languages/de_DE.po
+++ b/src/languages/de_DE.po
@@ -58,8 +58,8 @@ msgid "Sorry, nothing to display."
 msgstr "Nichts gefunden, was den Suchkriterien entspricht."
 
 #: ../category.php:6
-msgid "Categories for"
-msgstr "Kategorie-Archiv für"
+msgid "Category:"
+msgstr "Kategorie:"
 
 #: ../comments.php:3
 msgid "Post is password protected. Enter the password to view any comments."
